--- a/src/components/Kennel.css
+++ b/src/components/Kennel.css
@@ -41,8 +41,9 @@ address {
 img {
   display: block;
   border: 0;
-  width: 100%;
+  width: 30%;
   height: auto;
+  margin-top: 10px;
 }
 
 .section-content {
