changed css on home page and added confirm delete message for all tabs

--- a/src/components/animal/AnimalSpotlight.css
+++ b/src/components/animal/AnimalSpotlight.css
@@ -13,3 +13,14 @@
   .animal-spotlight p {
     color: black;
   }
+
+  .reload {
+      margin-bottom: 10px;
+      width: 15%
+  }
+
+  .spotlight {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
