finished assigning an employee to an animal in the editanimalform and fixed discharge animal button on employee details page

--- a/src/components/animal/AnimalDetail.css
+++ b/src/components/animal/AnimalDetail.css
@@ -7,3 +7,8 @@
   button:disabled:hover {
     background-color: lightgray;
   }
+
+  .animalsInCare {
+    display: flex;
+    justify-content: center;
+  }
