--- a/src/components/animal/AnimalForm.css
+++ b/src/components/animal/AnimalForm.css
@@ -59,3 +59,8 @@ fieldset input, fieldset button, fieldset select {
 fieldset .alignRight {
     text-align: right;
 }
+
+#employeeId {
+    margin-bottom: 5px;
+    height: 25px;
+}
