employees show up in location details

--- a/src/components/animal/AnimalDetail.css
+++ b/src/components/animal/AnimalDetail.css
@@ -8,7 +8,7 @@
     background-color: lightgray;
   }
 
-  .animalsInCare {
+  .expandedDetails {
     display: flex;
     justify-content: center;
   }
