added assigned location to employee edit form

--- a/src/components/animal/AnimalForm.css
+++ b/src/components/animal/AnimalForm.css
@@ -64,3 +64,8 @@ fieldset .alignRight {
     margin-bottom: 5px;
     height: 25px;
 }
+
+#locationId {
+    margin-bottom: 5px;
+    height: 25px;
+}
