added assigned employee selection to add animal form

--- a/src/components/animal/AnimalForm.css
+++ b/src/components/animal/AnimalForm.css
@@ -69,3 +69,8 @@ fieldset .alignRight {
     margin-bottom: 5px;
     height: 25px;
 }
+
+#employeeIdForm {
+    margin-bottom: 5px;
+    height: 25px;
+}
